# AmnesiacHAT-ECML-PKDD-2026-paper-codes

./: README.md
continual-learning-anonymous/: LICENSE  README.md  pyproject.toml
continual-learning-anonymous/clarena/: __init__.py
continual-learning-anonymous/clarena/backbones/: __init__.py
continual-learning-anonymous/clarena/callbacks/: __init__.py
continual-learning-anonymous/clarena/cl_algorithms/: __init__.py  fgadahat.py
continual-learning-anonymous/clarena/cl_algorithms/regularizers/: __init__.py
continual-learning-anonymous/clarena/cl_datasets/: __init__.py
continual-learning-anonymous/clarena/cul_algorithms/: __init__.py
continual-learning-anonymous/clarena/heads/: __init__.py  head_stl.py
continual-learning-anonymous/clarena/metrics/: __init__.py  base.py  cl_acc.py  cl_loss.py
continual-learning-anonymous/clarena/mtl_algorithms/: __init__.py
continual-learning-anonymous/clarena/mtl_datasets/: __init__.py
continual-learning-anonymous/clarena/pipelines/: __init__.py  cl_full_eval.py  cul_full_eval.py
continual-learning-anonymous/clarena/stl_algorithms/: __init__.py
continual-learning-anonymous/clarena/stl_datasets/: __init__.py
continual-learning-anonymous/clarena/utils/: __init__.py  metrics.py
continual-learning-research/: LICENSE  README.md
continual-learning-research/configs/: entrance.yaml
continual-learning-research/configs/backbone/: clmlp.yaml  clresnet.yaml  mlp.yaml  small_clmlp.yaml
continual-learning-research/configs/callbacks/: cl_default.yaml  cul_default.yaml  eval_default.yaml  mtl_default.yaml  stl_default.yaml
continual-learning-research/configs/cl_algorithm/: adahat.yaml  amnesiac_der.yaml  amnesiac_derpp.yaml  amnesiac_ewc.yaml  amnesiac_finetuning.yaml  amnesiac_hat.yaml  amnesiac_lwf.yaml  clpu_derpp.yaml  der.yaml  derpp.yaml  ewc.yaml  fgadahat.yaml  finetuning.yaml  hat.yaml  independent.yaml  lwf.yaml  unlearnable_independent.yaml
continual-learning-research/configs/cl_dataset/: combined_2.yaml  combined_20.yaml  combined_5.yaml  combined_simple_5.yaml  permuted_mnist.yaml  rotated_mnist.yaml  split_cifar10.yaml  split_cifar100.yaml  split_cifar100_5tasks.yaml  split_mnist.yaml
continual-learning-research/configs/cul_algorithm/: amnesiac_der_unlearn.yaml  amnesiac_derpp_unlearn.yaml  amnesiac_ewc_unlearn.yaml  amnesiac_finetuning_unlearn.yaml  amnesiac_hat_unlearn.yaml  amnesiac_lwf_unlearn.yaml  clpu_derpp_unlearn.yaml  independent_unlearn.yaml
continual-learning-research/configs/hydra/: default.yaml
continual-learning-research/configs/index/: example_cl_full_eval.yaml  example_cl_main_eval.yaml  example_cl_main_expr.yaml  example_cul_full_eval.yaml  example_cul_main_expr.yaml  example_mtl_eval.yaml  example_mtl_expr.yaml  example_stl_eval.yaml  example_stl_expr.yaml
continual-learning-research/configs/lightning_loggers/: default.yaml
continual-learning-research/configs/lr_scheduler/: reduce_lr_on_plateau.yaml  reduce_lr_on_plateau_10_tasks.yaml
continual-learning-research/configs/metrics/: cl_main_default.yaml  cl_main_eval_default.yaml  cl_main_expr_default.yaml  cul_full_eval_default.yaml  hat_default.yaml  mtl_default.yaml  stl_default.yaml
continual-learning-research/configs/misc/: default.yaml
continual-learning-research/configs/mtl_dataset/: from_cl_split_mnist.yaml
continual-learning-research/configs/optimizer/: adam.yaml  adam_10_tasks.yaml  sgd.yaml
continual-learning-research/configs/stl_dataset/: mnist.yaml
continual-learning-research/configs/trainer/: 10_tasks.yaml  cpu.yaml  cpu_eval.yaml  mps.yaml  mps_eval.yaml  single_gpu.yaml  single_gpu_eval.yaml
continual-learning-research/notebooks/: calculate_bwt.ipynb  calculate_fr.ipynb  calculate_fr_independent.ipynb  calculate_fwt.ipynb  plot_multiple_curves_acc.ipynb  results_aggregation_acc_loss_cls.ipynb
continual-learning-research/scripts/amnesiachat_paper/: ablation_study_pmnist_5tasks_til.sh  full.sh  (+5 more)
(+65 files in other folders)
